--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to ByteLore Website</h1>
         <br>This is a test!!!</br>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
-        <img src="/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
+        <img src="/images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a>
     </main>
 </body>
