--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">	
     <title>ByteLore</title>
     <link rel="stylesheet" href="home_page.css">
+    <link rel="icon" href="https://bytelore.cheeseindustries.de/favicon.png">
 </head>
 <body>
     <main>
         <h1>Welcome to ByteLore Website</h1>
         <br>This is a test!!!</br>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
-        <img src="/images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
+        <img src="/images/favicon.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a>
     </main>
 </body>
