--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <h1>Welcome to ByteLore Website</h1>
-        <br>This is a test!!!</br>
+        <br>click the mouse</br>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
         <img src="/images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a>
