--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
         <img src="/images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a>
+        <a href="template.html">template </a>
     </main>
 </body>
