--- a/public_html/template.html
+++ b/public_html/template.html
@@ -22,7 +22,7 @@
         <input type="text" id="Name" name="Name" placeholder="Megaman"><br>
         <label for="freeform">Body:</label><br>
         <textarea id="freeform" name="freeform" rows="4" cols="50" placeholder="Enter text here.."></textarea><br>
-        <a href="index.html">Home Page </a>
+        <a href="/public_html/index.html">Home Page </a>
     </main>
 </body>
 </html>
