--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <main>
-        <h1>Welcome to ByteLore Website</h1>
+        <h1>Welcome to ByteLore Website</h1><hr>
         <div><FONT COLOR="#67b3b5">Click the mouse</FONT></div>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
         <img src="/images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
