--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Welcome to ByteLore Website</h1><hr>
         <div><FONT COLOR="#67b3b5">Click the mouse</FONT></div>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
-        <img src="/images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
+        <img src="images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a>
         <a href="/public_html/template.html">Page Creation Template</a>
     </main>
