--- a/public_html/template.html
+++ b/public_html/template.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">	
     <title>ByteLore Template</title>
-    <link rel="stylesheet" href="/public_html/home_page.css">
+    <link rel="stylesheet" href="public_html/home_page.css">
     <link rel="icon" href="/favicon.ico">
     <style>
         body {
@@ -16,7 +16,7 @@
 <body>
     <main>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
-        <img src="/images/12ozmouse.png" height="500" alt="A picture of 12 Oz Mouse" title="I do it all">
+        <img src="images/12ozmouse.png" height="500" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a><br>
         <label for="Title">Title:</label>
         <input type="text" id="Name" name="Name" placeholder="Megaman"><br>
