--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">	
     <title>ByteLore</title>
-    <link rel="stylesheet" href="/public_html/home_page.css">
+    <link rel="stylesheet" href="public_html/home_page.css">
     <link rel="icon" href="/favicon.ico">
     <style>
         body {
@@ -18,9 +18,9 @@
         <h1>Welcome to ByteLore Website</h1><hr>
         <div><FONT COLOR="#67b3b5">Click the mouse</FONT></div>
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
-        <img src="/images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
+        <img src="images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a>
-        <a href="/public_html/template.html">Page Creation Template</a>
+        <a href="public_html/template.html">Page Creation Template</a>
     </main>
 </body>
 </html>
