LAMP integration/Page Creation system partially implemented

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="https://youtu.be/dQw4w9WgXcQ?si=XicsvjBmBxivOd1E">
         <img src="images/12ozmouse.png" height="200" alt="A picture of 12 Oz Mouse" title="I do it all">
         </a>
-        <a href="public_html/template.html">Page Creation Template</a>
+        <a href="/save_page.php">Page Creation Template</a>
     </main>
 </body>
 </html>
