--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">	
     <title>ByteLore</title>
-    <link rel="stylesheet" href="public_html/home_page.css">
+    <link rel="stylesheet" href="/home_page.css">
     <link rel="icon" href="/favicon.ico">
     <style>
         body {
