--- a/verification_sent.html
+++ b/verification_sent.html
@@ -14,8 +14,9 @@ if (isset($_SESSION["user_id"])) {
 <head>
     <meta charset="UTF-8">
     <title>Verification Email Sent</title>
+    <link rel="stylesheet" href="verification.css">   
 </head>
-<body>
+<body><br>
     <header>
         <h1>Verification Email Sent</h1>
     </header>
@@ -23,9 +24,12 @@ if (isset($_SESSION["user_id"])) {
     <div class="subheader">
         <?php include('header.php'); ?>
     </div><br>
-        <p>A verification email has been sent to your provided email address.</p>
-        <p>Please check your inbox (and spam/junk folder) for the verification email.</p>
-        <p>Click the link in the email to verify your account.</p>
+        <form><h4>
+         <p>A verification email has been sent to your provided email address.</p>
+         <p>Please check your inbox (and spam/junk folder) for the verification email.</p>
+         <p>Click the link in the email to verify your account.</p>
+         </h4>
+        </form>
     </main>
 </body>
 </html>
