--- a/verification_sent.html
+++ b/verification_sent.html
@@ -17,13 +17,13 @@ if (isset($_SESSION["user_id"])) {
     <link rel="stylesheet" href="verification.css">   
 </head>
 <body><br>
-    <header>
+    <header class="title">
         <h1>Verification Email Sent</h1>
     </header>
-    <main>
     <header class="subheader">
         <?php include('header.php'); ?>
     </header><br>
+    <main>
         <form><h4>
          <p>A verification email has been sent to your provided email address.</p>
          <p>Please check your inbox (and spam/junk folder) for the verification email.</p>
